--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.1.1",
+    "sharp": "^0.33.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
