--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.4",
     "@astrojs/mdx": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^6.1.3",
     "astro": "^4.1.1",
     "sharp": "^0.33.1",
     "tailwindcss": "^3.4.1",
